# yew-canvas

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml
scss/: style.scss
src/: fetch.rs  main.rs
src/components/: effects.rs  main_title.rs  mod.rs
src/pages/: home.rs
