[package]
name = "yew-canvas"
version = "0.1.0"
authors = ["VersBinarii <versbinarii@gmail.com>"]
edition = "2018"

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
pulldown-cmark = "0.8.0"
lazy_static = "1.4"
serde_json = "1"
serde = "1"
anyhow = "1"
dotenv_codegen = "0.15.0"
gloo = "0.3"
gloo-utils = "0.1"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

[dependencies.chrono]
version = "0.4.19"
features = ["wasmbind", "serde", "js-sys"]

[dependencies.web-sys]
version = "0.3.53"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "TextMetrics",
  "ImageData",
  "ImageBitmap"
]
